WIP fixing account listing overflow issues

--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -2050,9 +2050,9 @@ $mobile-input-bg
 
 .local-wallet-menu {
     // top: 50px!important;
-
     .table-cell {
         display: inline-block;
+        @extend .truncated;
     }
 }
 
